perbaikan kesalahan pada kode

--- a/Pertemuan 1/font.html
+++ b/Pertemuan 1/font.html
@@ -4,7 +4,7 @@
     </head> 
     <body>
         <b>menggunakan tag &lt;b&gt;</b><br>
-        <strong>menggunakan tag &gt; strong&lt;</strong><br>
+        <strong>menggunakan tag &lt;strong&gt;</strong><br>
         <i> menggunakan tag &lt; i&gt; </i><br>
         <em> menggunakan tag &lt; em&gt; </em><br>
         <u> menggunakan tag &lt; u&gt;</u><br>
