--- a/Pertemuan 1/gambar.html
+++ b/Pertemuan 1/gambar.html
@@ -14,7 +14,7 @@
         </p>
         <p>
             <!-- menggunakan path relative -->
-            <img src = "../dasarWeb/img/bunga1.jpg">
+            <img src = "../Pertemuan 1/img/bunga1.jpg">
             Vivamus sem nibh, fermentum a dolor maximus, maximus feugiat nibh.
             Duis vel condimentum lacus. Integer euismod ligula vel turpis auctor,
             a malesuada diam interdum.
