--- a/Pertemuan 1/macamLink.html
+++ b/Pertemuan 1/macamLink.html
@@ -47,7 +47,7 @@
         <a name="Link Absolut">
             <h1>Ini adalah contoh Link Absolut</h1>
             <p>
-                Klik <a href="http://www.google.com"></a> di sini</a> untuk pencarian yang Anda inginkan.<br><br> 
+                Klik <a href="http://www.google.com">di sini</a> untuk pencarian yang Anda inginkan.<br><br> 
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
                 labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
                 nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
@@ -64,7 +64,7 @@
         </a>
         <br><br>
         <a name="Link With New Windows">
-            <h1>Ini adalah contoh Link Absolut</h1>
+            <h1>Ini adalah contoh Link dengan window baru</h1>
             <p>
                 Buka <a href="http://www.google.com" target="_blank">www.google.com</a> di halaman baru.<br><br>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
@@ -83,7 +83,7 @@
         </a>
         <br><br>
         <a name="Link ke Emailt">
-            <h1>Ini adalah contoh Link Absolut</h1>
+            <h1>Ini adalah contoh Link ke email </h1>
             <p>
                 Anda bisa menghubungi saya di <a href="nailto:dyah.ayu@polinema.ac.id">email ini</a>
                 untuk pertanyaan lebih lanjut <br><br>
