--- a/Pertemuan 1/warna.html
+++ b/Pertemuan 1/warna.html
@@ -4,9 +4,9 @@
             pewarnaan
         </title>
     </head>
-        <body bg colour= "aqua">
+        <body bgcolor= "aqua">
             <h3 align = "center"> heading 3  </h3>
             <font color = "red"> font berwarna merah </font> <br><br>
-            <font color = "#FF0000"> font berwana merah (mengunakan warna) </font>
+            <font color = "#FF0000"> font berwana merah (mengunakan nilai heksa) </font>
         </body>  
 </html>
