--- a/Pertemuan 1/buatForm.html
+++ b/Pertemuan 1/buatForm.html
@@ -18,9 +18,19 @@
                 <input type="radio" name="var4" value="r2"> 16 - 20 <br>
                 <input type="radio" name="var4" value="r3"> 21 - 25 <br><br> 
                 <b> Which on do you have? </b><br><br>
-                <input type="checkbox" name="vehicle1" value="Bike" checked> I have a bike <br>
-                <input type="checkbox" name="vehicle2" value="Car" > I have a car <br>
-                <input type="checkbox" name="vehicle3" value="Boat"> I have a boat <br>              
+                <input type="checkbox" name="vehicle1" value="Plane"checked> I have a plane <br>
+                <input type="checkbox" name="vehicle2" value="Bike"> I have a bike <br>
+                <input type="checkbox" name="vehicle3" value="Car"> I have a car <br>
+                <input type="checkbox" name="vehicle4" value="Boat"> I have a boat <br>
+                <br>
+                <b>Where are you from?</b>
+                    <br>
+                        <select name="ver6" size="1">
+                            <option value="BG"> Bulgaria
+                            <option value="UK"> United Kingdom
+                            <option value="USA"selected> USA
+                        </select> 
+                        <br><br>             
             <input type="submit" name="var5" value="send">
             <input type="reset" name="var6" value="clear">
         </form>
