--- a/Pertemuan 1/buatForm.html
+++ b/Pertemuan 1/buatForm.html
@@ -3,7 +3,7 @@
         <title>Membuat Form</title>
     </head>
     <body>
-        <form method="post" action="gambar.html">
+        <form method="get" action="gambar.html">
             <h4>FORM</h4>
             <input type="text" name="var1" size="30" value="enter your name here">
             <br><br>
@@ -25,12 +25,20 @@
                 <br>
                 <b>Where are you from?</b>
                     <br>
-                        <select name="ver6" size="1">
+                        <select name="ver6" size="2">
                             <option value="BG"> Bulgaria
                             <option value="UK"> United Kingdom
-                            <option value="USA"selected> USA
+                            <option value="USA"> USA
+                            <option value="IDN"selected> Indonesia
                         </select> 
-                        <br><br>             
+                        <br><br>
+                <b>Enter your private code:</b>
+                <input type="password" name="password" size="8">
+                <br><br>
+                <b>Enter your Comments:</b>
+                <br>
+                <textarea name="comments" rows="3" cols="30">fill this area</textarea>
+                <br><br>            
             <input type="submit" name="var5" value="send">
             <input type="reset" name="var6" value="clear">
         </form>
