--- a/Pertemuan 1/hello.html
+++ b/Pertemuan 1/hello.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <p>
-            Hello world! Welcome to My <br> <b> first </b> HTML page.
+            Hello world! Welcome to My  <b> first </b> HTML page.
         </p>
     </body>
 </html>
