--- a/pertemuan 2/layoutingCSS.html
+++ b/pertemuan 2/layoutingCSS.html
@@ -3,13 +3,11 @@
 <head>
     <title>CSS Layouting</title>
     <style>
-        .navigasi {
+        a{
             background-color: pink;
-        }
-
-        .main{
-            width: 600px;
-            background-color: lightgreen;
+            width: 200px;
+            height: 200px;
+            display: inline-block;
         }
     </style>
 </head>
@@ -24,6 +22,7 @@
         <a href="#">Link 2</a>
         <a href="#">Link 3</a>
         <a href="#">Link 4</a>
+        <a href="#">Link 5</a>
         
     </div>
 
