percobaan 3 inline javascript

--- a/pertemuan 3/embedJS.html
+++ b/pertemuan 3/embedJS.html
@@ -16,4 +16,6 @@
             console.log("hello JS dary body"); 
         </script>
     </body>
+
+    <a href="#" onclick="alert('Yey!')">klik aku!</a>
 </html>
