percobaan 3 inline oncliick dan href langsung

--- a/pertemuan 3/embedJS.html
+++ b/pertemuan 3/embedJS.html
@@ -18,4 +18,6 @@
     </body>
 
     <a href="#" onclick="alert('Yey!')">klik aku!</a>
+    <br><br>
+    <a href="javascript:alert('yey!')">klik aku!</a>
 </html>
