--- a/pertemuan 5/praktik_jquery/praktikum_jquery.html
+++ b/pertemuan 5/praktik_jquery/praktikum_jquery.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Praktikum JQuery</title>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+        <script src="jquery-3.7.1.js"></script>
     </head>
     <body>
     </body>
