--- a/pertemuan 5/praktik_jquery/jquery_ui_plugin_p2.html
+++ b/pertemuan 5/praktik_jquery/jquery_ui_plugin_p2.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accordion</title>
     <script src="jquery-3.7.1.js"></script>
     <script src="jquery-ui-1.14.0/jquery-ui-1.14.0/jquery-ui.js"></script>
     <script>
